add swagger_v2
