# app.js
@@ -4,8 +4,8 @@ const cors = require('cors')
 const swaggerUi = require('swagger-ui-express')
 const swaggerDocument = require('./swagger.json')
 
-const usersRoutes = require('./src/routes/api/usersRoutes')
-const productsRoutes = require('./src/routes/api/productsRoutes')
+const usersRoutes = require('./src/routes/usersRoutes')
+const productsRoutes = require('./src/routes/productsRoutes')
 
 const app = express()
 const formatsLogger = app.get('env') === 'development' ? 'dev' : 'short'
@@ -17,8 +17,8 @@ app.use(cors())
 app.use(express.json({ limit: 10000 }))
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
-app.use('/api/users', usersRoutes)
-app.use('/api/products', productsRoutes)
+app.use('/users', usersRoutes)
+app.use('/products', productsRoutes)
 
 app.use((req, res) => {
   res.status(404).json({ message: `Wrong route` })
