# swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "version": "1.0.0",
+    "version": "1.0.2",
     "title": "SlimMom API",
     "description": "API documentation for 4-group project 'SlimMom'",
     "license": {
@@ -11,7 +11,7 @@
   },
   "consumes": ["application/json"],
   "produces": ["application/json"],
-  "servers": [{ "url": "http://localhost:3001/api" }],
+  "servers": [{ "url": "http://localhost:3001" }],
   "tags": [
     {
       "name": "User",
@@ -271,8 +271,8 @@
         },
 
         "responses": {
-          "200": {
-            "description": "OK",
+          "201": {
+            "description": "Created",
             "content": {
               "application/json": {
                 "schema": {
@@ -312,6 +312,45 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "404": {
+            "description": "Not found"
+          },
+
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/products/{date}": {
+      "get": {
+        "tags": ["Products"],
+        "summary": "Get info for day",
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "date",
+            "type": "string",
+            "description": "Enter date",
+            "required": true
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DateResponse"
+                }
+              }
+            }
           },
           "400": {
             "description": "Bad request"
@@ -413,7 +452,8 @@
           },
           "age": {
             "type": "number",
-            "description": "User's age"
+            "description": "User's age",
+            "min": 18
           },
           "desiredWeight": {
             "type": "number",
@@ -425,11 +465,11 @@
           }
         },
         "example": {
-          "weight": "80",
-          "height": "165",
-          "age": "30",
-          "desiredWeight": "70",
-          "groupBlood": "3"
+          "weight": 80,
+          "height": 165,
+          "age": 30,
+          "desiredWeight": 70,
+          "groupBlood": 3
         }
       },
       "DailyRateResponse": {
@@ -448,7 +488,7 @@
           }
         },
         "example": {
-          "kcal": "1420",
+          "kcal": 1420,
           "productsNotRecommended": ["мучные", "орехи", "зерновые", "овощи и зелень", "масла и жиры"]
         }
       },
@@ -546,6 +586,75 @@
           "weight": 250,
           "title": "Томат (помидор)",
           "owner": "60ffdb"
+        }
+      },
+      "DateResponse": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "User's email"
+          },
+          "date": {
+            "type": "string",
+            "description": "Day's date"
+          },
+          "products": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "kcal": {
+                  "type": "number",
+                  "description": "Product's kcal"
+                },
+                "weight": {
+                  "type": "number",
+                  "description": "Product's weight"
+                },
+                "title": {
+                  "type": "string",
+                  "description": "Product's title"
+                }
+              }
+            }
+          },
+          "dayNorm": {
+            "type": "string",
+            "description": "Calories per day"
+          },
+          "totalKcalPerDay": {
+            "type": "number",
+            "description": "Calories consumed per day"
+          },
+          "KcalRemain": {
+            "type": "number",
+            "description": "Calories left for the day"
+          },
+          "percentage": {
+            "type": "string",
+            "description": "Percentage of the daily norm"
+          }
+        },
+        "example": {
+          "email": "guest@example.com",
+          "date": "2021-07-27",
+          "products": [
+            {
+              "kcal": 50,
+              "weight": 250,
+              "title": "Томат (помидор)"
+            },
+            {
+              "kcal": 108,
+              "weight": 400,
+              "title": "Квас хлебный"
+            }
+          ],
+          "dayNorm": 1570,
+          "totalKcalPerDay": 158,
+          "kcalRemain": 1412,
+          "percentage": 10
         }
       }
     },
